crates/mun_codegen/src/snapshots/mun_codegen__test__loop_expr.snap
---
source: crates/mun_codegen/src/test.rs
assertion_line: 1045
expression: "\n    pub fn foo() {\n        loop {}\n    }\n    "

---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define void @foo() {
body:
  br label %loop

loop:                                             ; preds = %loop, %body
  br label %loop
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

