crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_f32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: f32) -> f32 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define float @negate(float %0) {
body:
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %neg = fneg float %a1
  ret float %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
