crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_f64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: f64) -> f64 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define double @negate(double %0) {
body:
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %neg = fneg double %a1
  ret double %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
