crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_i128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: i128) -> i128 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i128 @negate(i128 %0) {
body:
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %neg = sub i128 0, %a1
  ret i128 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
