crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_i32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: i32) -> i32 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @negate(i32 %0) {
body:
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %neg = sub i32 0, %a1
  ret i32 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
