crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: i64) -> i64 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @negate(i64 %0) {
body:
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %neg = sub i64 0, %a1
  ret i64 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
