crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_i8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: i8) -> i8 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i8 @negate(i8 %0) {
body:
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %neg = sub i8 0, %a1
  ret i8 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
